scss/sections/_taking.scss
#dosing {
    h2,h3 {
        margin-bottom: 10px;
    }
    p {
        margin-bottom: 20px;
    }
    p, li {
        line-height: 2.5rem;
    }
    ul {
        margin-bottom: 30px;
    }
    .group {
        .image-wrapper {
            float: right;
            margin-left: 20px;
            @include respond(tab-land) {
                margin-left: 0;
            }
        }
        @include respond(tab-land) {
            display: flex;
            flex-direction: column-reverse;
            align-items: center;
        }
    }
    .opaque-group {
        display: flex;
        align-items: center;
        @include respond(tab-land) {
            flex-direction: column;
        }
        .image-wrapper {
            position: relative;
            img {
                width: 100%;
                @include respond(tab-land) {
                    width: 90%;
                }
            }
            @include respond(tab-land) {
                text-align: center;
                margin-bottom: 25px;
            }
            &:after {
                content: '';
                position: absolute;
                top: 0;
                left: 0;
                width: 100%;
                height: 100%;
                @include overlay-gradient;
                @include respond(tab-land) {
                    display: none;
                }
            }
        }
        .col {
            text-align: right;
            display: flex;
            flex-direction: column;
            align-items: flex-end;
            justify-content: space-evenly;
            width: 90%;
            @include respond(tab-land) {
                text-align: left;
                align-items: center;
                width: auto;
            }
            .next-btn {
                margin: 0;
                width: 450px;
                @include respond(tab-land) {
                    width: auto;
                }
            }
        }
    }
}
#expect{
    h2 {
        line-height: 3.5rem;
    }
    h2,p,img {
        margin-bottom: 40px;
    }
    p {
        line-height: 2.5rem;
    }
}
#preparing {
    h2,h3 {
        margin-bottom: 10px;
    }
    p {
        margin-bottom: 20px;
    }
    li {
        line-height: 2.5rem;
    }
    h4 {
        margin-bottom: 40px;
        color: $gray-color-2;
    }
    .group {
        margin-bottom: 30px;
    }
    .image-wrapper {
        width: 55%;
        margin: 20px;
        img {
            @include round-corners;
            border: 3px solid $primary-color;
            width: 500px;
            height: 380px;
            object-fit: cover;
            @include respond(tab-port) {
                width: 300px;
                height: 300px;
            }
        }
    }
}
// Shared Elements
#expect,#preparing {
    .group {
    display: flex;
    @include respond(tab-land) {
        flex-direction: column;
    }
    .image-wrapper {
        width: 33%;
        @include respond(tab-land) {
            margin: 20px auto;
            width: auto;
        }
        img {
            @include round-corners;
            border: 3px solid $primary-color;
            width: 380px;
            height: 380px;
            object-fit: cover;
            @include respond(tab-port) {
                width: 250px;
                height: 250px;
            }
        }
    }
    }
}
#monitoring {
    h2,p {
        margin-bottom: 40px;
    }
    p,li {
        line-height: 2.5rem;

    }
    h3 {
        margin-bottom: 15px;
        line-height: 3rem;
        &:last-of-type {
            margin-bottom: 40px;
        }
    }
    ul {
        margin-bottom: 40px;
        ul {
            margin-bottom: 0;
            li {
                margin-left: 10px;
                &::before {
                content: "–";
                margin-left: 5px;
                }
            }
        }
    }
    .label {
        margin-bottom: 0px;
    }
}

